# BioImageSuiteLite

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  UserGuide.md  important.txt  manual_test_io.py  paper.bib  paper.md  pyproject.toml  requirements.txt  test.txt
Architecture/: .$code_flow.drawio.bkp  .$code_flow.drawio.dtmp  code_flow.drawio
BioImageSuiteLite/: __init__.py  analysis_processor.py  gui_manager.py  io_operations.py  roi_handler.py  utilities.py
TransiScope/: __init__.py  analysis_processor.py  gui_manager.py  io_operations.py  roi_handler.py  utilities.py
examples/: comprehensive_analysis_guide.ipynb  test.ipynb  usage_demo.ipynb
examples/images/: README.md
tests/: test_io_operations.py
