[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TransiScope"
version = "1.0.0"
authors = [
  { name="Rinki Dasgupta", email="rinkidsgpt@gmail.com" },
  { name="Kaushik Das", email="kaushik.k.das@gmail.com" },
]
description = "A user-friendly tool for automated detection and analysis of transient events in time-lapse microscopy."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "scipy",
    "opencv-python-headless", # For AVI reading and basic image ops
    "tifffile",             # For multi-TIFF writing
    "scikit-image",         # For DoG, Otsu, etc.
    "napari[all]",          # For the GUI, [all] pulls in qtpy bindings
    "shapely",              # For ROI area calculation (optional, but good)
    "ruptures",             # For Scisson-like analysis (optional, for future integration)
    "matplotlib",           # For plotting and visualization
    # "bnp-step",           # If you choose to use this for Scisson-like
]

[project.urls]
"Homepage" = "https://github.com/InnovationLine/TransiScope" 
"Bug Tracker" = "https://github.com/InnovationLine/TransiScope/issues" 

[project.scripts]
transiscope = "TransiScope.gui_manager:main"

[tool.setuptools]
packages = ["TransiScope"]